# lichess-puzzle-tb-check

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yml
puzzle_tb/: __init__.py  classify.py  cli.py  coverage.py  progress.py  runner.py  tablebase.py  verify.py
puzzle_tb_check/: classify.py  cli.py  coverage.py  runner.py  schema.py  tablebase.py  verify.py
tests/: test_coverage.py  test_runner.py  test_schema.py  test_verify.py
