[project]
name = "puzzle-tb"
version = "0.1.0"
description = "Verify Lichess puzzles against tablebase data"
requires-python = ">=3.14"
dependencies = [
    "chess>=1.11",
    "aiohttp>=3.10",
]

[project.scripts]
puzzle-tb = "puzzle_tb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["puzzle_tb"]

[dependency-groups]
dev = ["mypy>=1.11"]

[tool.mypy]
strict = true
files = ["puzzle_tb", "tests"]
