[project]
name = "puzzle-tb-check"
version = "0.1.0"
description = "Verify Lichess puzzles against tablebase data"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "chess>=1.11",
    "aiohttp>=3.10",
]

[project.scripts]
puzzle-tb-check = "puzzle_tb_check.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["puzzle_tb_check"]

[dependency-groups]
dev = ["mypy>=1.11"]

[tool.mypy]
strict = true
files = ["puzzle_tb_check", "tests"]
